--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+local/
+uploads/
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
