--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^7.1.1",
     "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
