--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ bower_components
 local/
 uploads/
 terraform/
+loadtesting/
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
