--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
@@ -26,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
