--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "prod": "nohup node ./apps/Insurance/bin/www &",
-    "build-css": "npx tailwindcss  public/styles/tailwind.css -o public/styles/style.css"
+    "prod": "nohup node ./apps/Insurance/bin/www &"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.347.1",
-    "@material-tailwind/html": "^2.0.0",
-    "autoprefixer": "^10.4.14",
     "aws-sdk": "^2.1394.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -20,22 +17,14 @@
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
-    "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.3",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "postcss": "^8.4.24",
-    "postcss-cli": "^10.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22",
-    "tailwindcss": "^3.3.2"
+    "nodemailer": "^6.9.3"
   }
 }
