--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-uuid": "^1.4.8",
     "nodemailer": "^6.9.3"
   }
 }
