--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "node-uuid": "^1.4.8",
     "nodemailer": "^6.9.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1"
   }
 }
