--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "mongoose": "^7.1.1",
     "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.1",
+    "morgan-json": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "node-uuid": "^1.4.8",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1"
