--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ loadtesting/
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+notes/*
 
 # Dependency directories
 node_modules/
