--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "email-templates": "^11.1.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
@@ -28,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "node-uuid": "^1.4.8",
     "nodemailer": "^6.9.3",
+    "pug": "^3.0.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
